# haproxy-rs

./: Cargo.toml  README.md
haproxy-stats/: .gitignore  Cargo.toml  README.md
haproxy-stats-socket/: Cargo.toml  README.md
haproxy-stats-socket/src/: lib.rs
haproxy-stats-socket/src/client/: impl_show_env.rs  impl_show_info.rs  impl_show_stat.rs  mod.rs
haproxy-stats-socket/tests/: integration_tests.rs  run  run_integration_tests.sh
haproxy-stats-socket/tests/integration_tests/: helpers.rs  show_env.rs  show_info.rs  show_stat.rs
haproxy-stats/src/: command.rs  env.rs  info.rs  lib.rs  stat.rs
haproxy-stats/src/formats/: json.rs
haproxy-stats/tests/files/: 2_5_5_show_env.txt  2_5_5_show_info.json  2_5_5_show_info.txt  2_5_5_show_stat.csv  2_5_5_show_stat.json  README.md
haproxy_docker/with_stats_socket/: .gitignore  run.sh
haproxy_docker/with_stats_socket/conf/: haproxy.cfg
