[package]
name = "haproxy-stats-socket"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HAProxy stats socket"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/haproxy-rs"
homepage = "https://github.com/bk-rs/haproxy-rs"
documentation = "https://docs.rs/haproxy-stats-socket"
keywords = []
categories = []
readme = "README.md"

[features]
default = []
_integration_tests = []

[dependencies]
haproxy-stats = { version = "0.0", path = "../haproxy-stats" }

tokio = { version = "1.17", features = ["net", "io-util"] }
futures-util-either = { version = "0.1", default_features = false, features = ["std", "tokio_io"] }

[dev-dependencies]
tokio = { version = "1.17", features = ["macros", "rt"] }

env_logger = { version = "0.9" }
log = { version = "0.4" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
denylist = [
    "_integration_tests"
]
