[package]
name = "haproxy-stats"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "HAProxy stats"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/haproxy-rs"
homepage = "https://github.com/bk-rs/haproxy-rs"
documentation = "https://docs.rs/haproxy-stats"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde = { version = "1.0", default_features = false, features = ["std", "derive"] }
serde-enum-str = { version = "0.2", default_features = false }
csv = { version = "1.1", default_features = false }
serde_json = { version = "1.0", default_features = false, features = ["std"] }
semver = { version = "1.0", default_features = false, features = ["serde"] }
chrono = { version = "0.4", default_features = false, features = ["serde"] }
duration-str = { version = "0.3", default_features = false, features = ["serde"] }
